--- a/README
+++ b/README
@@ -1,17 +1,17 @@
-SLD Register Post Types & Taxonomies for WordPress
--------------
+# SLD Register Post Types & Taxonomies for WordPress
+
 
 This is a PHP class to be used in a WordPress theme or plugin. It contains two helper classes that allow you to register custom post types and taxonomies much easier and more efficiently than with default WordPress APIs. It also contains a few functions to improve the functionality of custom post types, such as the rewrite API and adding post-type classes in the front-end and admin for easier css.
 
 Optimized for WordPress 3.1 but will work with any version 3.0+
 
-Credits & License
--------------
+# Credits
 
 The class is heavily based on the work of Matt Wiebe and his [Smarter Custom Post Types class](http://somadesign.ca/projects/smarter-custom-post-types/ "Smarter Custom Post Types class")
 
-This class is built and maintained by [Stresslimit Design](http://stresslimitdesign.com/about-our-wordpress-expertise "Stresslimit Design") and licensed under the GPLv2.
+This class is built and maintained by [Stresslimit Design](http://stresslimitdesign.com/about-our-wordpress-expertise "Stresslimit Design")
 
+# License
 
 This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 2 of the License, or (at your option) any later version.
 
